--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hackrice?\
 spring.datasource.username=root
 spring.datasource.password=Benson
 
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
