--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=Benson
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
+spring.web.resources.static-locations=classpath:/resources/static
